# stamper

./: .gitignore  AUTHORS  BUILD.md  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README.md  bootstrap  config.h.in  configure.ac  super-clean  test-build-compatibility.sh  test_ts_coverage.c  test_ts_runner.c  test_ts_simple.c  ts.c  ts_test.h
doc/: ts.1  ts.info  ts.texi
